[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scenes/HUD.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Background.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Asteroid.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/AsteroidPosition.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scripts/Infinite1.gd" type="Script" id=6]
[ext_resource path="res://Scenes/Timer.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/GameplayMusic.tscn" type="PackedScene" id=8]

[node name="Infinite1" type="Node2D"]
script = ExtResource( 6 )

[node name="Background" parent="." instance=ExtResource( 2 )]

[node name="Player" parent="." instance=ExtResource( 4 )]
position = Vector2( 20, 98 )

[node name="Asteroid" parent="." instance=ExtResource( 3 )]

[node name="AsteroidPosition" parent="." instance=ExtResource( 5 )]

[node name="AsteroidSpawn" type="Timer" parent="."]
wait_time = 0.6
autostart = true

[node name="HUD" parent="." instance=ExtResource( 1 )]

[node name="Timer" parent="." instance=ExtResource( 7 )]

[node name="GameplayMusic" parent="." instance=ExtResource( 8 )]
[connection signal="area_entered" from="Player" to="." method="_on_Player_area_entered"]
[connection signal="timeout" from="AsteroidSpawn" to="." method="_on_AsteroidSpawn_timeout"]

[editable path="HUD"]

[editable path="Timer"]
